--- a/app/src/main/res/layout/activity_reg_list.xml
+++ b/app/src/main/res/layout/activity_reg_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    tools:context=".view.MemberListActivity">
+    tools:context=".view.RegListActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
